Closed Bug 1563241 Opened 5 years ago Closed 5 years ago

Perma SM bustages tests/wasm/import-export.js when Gecko 69 merges to Beta on 2019-07-01

Categories

(Core :: JavaScript: WebAssembly, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox67 --- unaffected
firefox67.0.1 --- unaffected
firefox68 --- unaffected
firefox69 + fixed

People

(Reporter: CosminS, Assigned: bbouvier)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[Tracking Requested - why for this release]:

Central as Beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=busted%2Cexception%2Crunnable&revision=a0c03a6bf8a52a55e94a0646a1422535a05af770&selectedJob=254576149

Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=254576149&repo=try&lineNumber=32668

[task 2019-07-03T11:57:28.670Z] TEST-PASS | js/src/jit-test/tests/wasm/import-export-sigs.js | Success (code 0, args "--ion-eager --ion-offthread-compile=off --more-compartments") [0.4 s]
[task 2019-07-03T11:57:28.704Z] TEST-PASS | js/src/jit-test/tests/wasm/import-export-sigs.js | Success (code 0, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [0.4 s]
[task 2019-07-03T11:57:28.712Z] /builds/worker/workspace/build/src/js/src/jit-test/tests/wasm/import-export.js:556:5 Error: Assertion failed: got function 0() {
[task 2019-07-03T11:57:28.713Z] /builds/worker/workspace/build/src/js/src/jit-test/tests/wasm/import-export.js:556:5 [native code]
[task 2019-07-03T11:57:28.713Z] /builds/worker/workspace/build/src/js/src/jit-test/tests/wasm/import-export.js:556:5 }, expected null
[task 2019-07-03T11:57:28.713Z] Stack:
[task 2019-07-03T11:57:28.713Z] @/builds/worker/workspace/build/src/js/src/jit-test/tests/wasm/import-export.js:556:5
[task 2019-07-03T11:57:28.713Z] Exit code: 3
[task 2019-07-03T11:57:28.713Z] FAIL - wasm/import-export.js
[task 2019-07-03T11:57:28.713Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/wasm/import-export.js | /builds/worker/workspace/build/src/js/src/jit-test/tests/wasm/import-export.js:556:5 Error: Assertion failed: got function 0() { (code 3, args "") [0.2 s]
[task 2019-07-03T11:57:28.714Z] INFO exit-status : 3
[task 2019-07-03T11:57:28.714Z] INFO timed-out : False
[task 2019-07-03T11:57:28.714Z] INFO stderr 2> /builds/worker/workspace/build/src/js/src/jit-test/tests/wasm/import-export.js:556:5 Error: Assertion failed: got function 0() {
[task 2019-07-03T11:57:28.714Z] INFO stderr 2> /builds/worker/workspace/build/src/js/src/jit-test/tests/wasm/import-export.js:556:5 [native code]
[task 2019-07-03T11:57:28.714Z] INFO stderr 2> /builds/worker/workspace/build/src/js/src/jit-test/tests/wasm/import-export.js:556:5 }, expected null
[task 2019-07-03T11:57:28.714Z] INFO stderr 2> Stack:
[task 2019-07-03T11:57:28.714Z] INFO stderr 2> @/builds/worker/workspace/build/src/js/src/jit-test/tests/wasm/import-export.js:556:5

This was uncovered by Bug 1562185, backing out bugs 1561747, 1562906 led to green build on beta-sims. Benjamin, please take a look over it.

Flags: needinfo?(bbouvier)

I just uploaded a patch. Can you tell me if this is enough to fix the issue, please?

Flags: needinfo?(bbouvier) → needinfo?(csabou)

Thanks, Benjamin.

Assignee: nobody → bbouvier
Pushed by bbouvier@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1c595f00eeec
Make Spidermonkey's testing intrinsic wasmBulkMem dependent on shared memory too; r=lth
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: