Bug 1563241: Make Spidermonkey's testing intrinsic wasmBulkMem dependent on shared memory too; r=lth a=beta-fix

Differential Revision: https://phabricator.services.mozilla.com/D36774